# auto-channel-bot

./: TODO  pyproject.toml
alembic/: env.py
src/: app_builder.py  build.py  main.py
src/admin/: routes.py
src/core/: config.py  db_helper.py  schemas.py
src/handlers/: __init__.py
src/handlers/callback_handlers/: main_cb_handlers.py  order_form_handlers.py
src/handlers/commands/: main_commands.py
src/markups/: main_kb.py
src/middlewares/: database.py
src/utils/: fsm_data.py  logger.py  notifications.py  promo_scheduler.py  texts.py
