[project]
name = "channel-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Krushovice",email = "kickstar69@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosmtplib (>=4.0.2,<5.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
