[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13"
aiogram = ">=3.22.0,<4.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
sqlalchemy = { version = ">=2.0.43,<3.0.0", extras = ["asyncio"] }
asyncpg = ">=0.30.0,<0.31.0"
aiosmtplib = ">=4.0.2,<5.0.0"
alembic = ">=1.16.4,<2.0.0"
apscheduler = ">=3.11.0,<4.0.0"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
